wier/force-app/main/default/objects/Comment_Update__c/Comment_Update__c.object-meta.xml
<CustomObject>
    <label>Comment / Update</label>
    <nameField>
        <displayFormat>Update-{000000}</displayFormat>
        <label>Comment/Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments / Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>