wier/force-app/main/default/objects/Comment_Update__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment / Update</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>