wier/force-app/main/default/objects/Comment_Update__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comments / Updates</relationshipLabel>
    <relationshipName>Comments_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>