wier/force-app/main/default/objects/Comment_Update__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity Id</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipLabel>Comments / Updates</relationshipLabel>
    <relationshipName>Comments_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>