wier/force-app/main/default/objects/Comment_Update__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>General Comment</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>