wier/force-app/main/default/objects/Comment_Update__c/validationRules/Comment_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Comment__c ) = 0</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Please enter the comments /  Updates</errorMessage>
</ValidationRule>