wier/force-app/main/default/objects/Comment_Update__c/validationRules/Subject_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Subject_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Subject__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Subject__c</errorDisplayField>
    <errorMessage>Please select the subject for comment</errorMessage>
</ValidationRule>